--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Simple Interest</title>
+    <title>Web App - Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
@@ -10,7 +10,7 @@
         <h1>Simple Interest Calculator</h1>
 
         Amount <input type="number"  id="principal">  <br/>
-        Rate <span id="rate_val">10.25%</span>
+        Rate <span id="rate_val" >10.25%</span>
         <input type="range" onchange="updateRate()" id="rate" min="1" max="20" value="10.25" step="0.25">  <br/>
         No. of Years <select id="years">
                         <option value="1">1</option>
@@ -29,7 +29,7 @@
         <button onclick="compute()">Compute</button>
         <br/>
         <footer>
-            &#169; This Calculator belongs to Doug
+            &#169; Everyone Can Get Rich
          </footer>
         </div>
         
