Add Compund Interest

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
         Interest : <span id="result"></span><br>
 
         <button onclick="compute()">Compute</button>
+        <div id="maindiv2">
+            <h1>Compound Interest Calculator</h1>
+        </div>
         <br/>
         <footer>
             &#169; Everyone Can Get Rich
          </footer>
         </div>
+
         
     </body>
 </html>
