--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         <option value="9">9</option>
                         <option value="10">10</option>
                     </select> <br/>
-        Interest : <span id="result"></span><br>
+        Interest : <br/>
+        <span id="result"></span><br>
 
         <button onclick="compute()">Compute</button>
         <div id="maindiv2">
