--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                         <option value="10">10</option>
                     </select> <br/>
         Interest : <br/>
-        <span id="result"></span><br>
+        <div>
+            <span id="result"></span><br>
+        </div>
 
         <button onclick="compute()">Compute</button>
         <div id="maindiv2">
