--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                         <option value="9">9</option>
                         <option value="10">10</option>
                     </select> <br/>
-        Interest : <br/>
+        <br/>
         <div>
+            <h3>Results</h3>
             <span id="result"></span><br>
         </div>
 
